# expressbook

./: .dockerignore  .gitignore  Dockerfile  Hotel Booking App.postman_collection.json  README.MD  config.yml  docker-compose.yml  hotel_db_example.sql  nginx.conf  pyproject.toml  requirements.txt  servers.json
hotel-ui/: package-lock.json  package.json
hotel-ui/public/: index.html
hotel-ui/src/: Customer.js  Customer.tsx  Employee.tsx  Reservations.tsx  Rooms.tsx  index.tsx
hotel-ui/src/customer/: Customer.tsx  Hotel.tsx  HotelBrand.tsx  Name.tsx  Reservations.tsx  Rooms.tsx  SignInCustomer.tsx  Welcome.tsx  WelcomeCustomer.tsx
hotel-ui/src/customer/customerDialogs/: EditCustomerProfileDialog.tsx
hotel-ui/src/customer/dialogs/: EditCustomerProfileDialog.tsx
hotel-ui/src/employee/: CheckCustomer.tsx  CheckIn.tsx  Employee.tsx  ManageCustomer.tsx  ManageEmployee.tsx  ManageRoom.tsx  Provinces.tsx  SignInEmployee.tsx  WelcomeEmployee.tsx
hotel-ui/src/employee/dialogs/: EditEmployeeProfileDialog.tsx
hotel-ui/src/employee/employeeDialogs/: CreateCustomerDialog.tsx  CreateEmployeeDialog.tsx  EditEmployeeDialog.tsx  (+3 more)
hotel-ui/src/sharedDialogs/: ConfirmationDialog.tsx
hotel_booking_server/: BadRequestError.py  ResourceNotFoundError.py  __init__.py  hotel_data.py  names.txt  routes.py  setup_db.py  streets.txt  wsgi.py
hotel_booking_server/errors/: ResourceConflictError.py
hotel_booking_server/routes/: customer_routes.py  hotel_routes.py  setup_routes.py
sql/: hotel_db_empty.sql  hotel_db_example.sql
tests/: test_hotel_booking_server.py
